--- a/templates/home.html
+++ b/templates/home.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "index.html" %}
 
 {% block content %}
 <div class="posts">
@@ -7,7 +7,7 @@
 			<header class="post-header">
 				<h2 class="post-title">{{ post.title }}</h2>
 				<p class="post-meta">
-					Time：<a class="post-author" href="#">{{ post.date_time}}</a>
+					Time：<a class="post-author" href="#">{{ post.date_time|date:"Y /m /d"}}</a>
 					<a class="post-category post-category-js" href="#">{{ post.category }}</a>
 				</p>
 			</header>
@@ -17,6 +17,7 @@
 					{{ post.content }}
 				</p>
 			</div>
+			<a class="pure-button" href="{% url "detail" id=post.id %}">Read More >>></a>
 		</section>
 	{% endfor %}
 </div>
