--- a/templates/index.html
+++ b/templates/index.html
@@ -18,10 +18,22 @@
 				<nav class="nav">
 					<ul class="nav-list">
 						<li class="nav-item">
-							<a class="pure-button" href="https://www.baidu.com">github</a>
+							<a class="button-success pure-button" href="/">主页</a>
+						</li>
+						<li class="nav-itme">
+							<a class="button-success pure-button" href="/">归档</a>
+						</li>
+						<li class="nav-item">
+							<a class="pure-button" href="https://github.com/jiuyue09/my_blog_tutorial">github</a>
 						</li>
 						<li class="nav-itme">
 							<a class="pure-button" href="https://www.gitbook.com">gitbook</a>
+						</li>
+						<li class="nav-item">
+							<a class="button-success pure-button" href="/">专题</a>
+						</li>
+						<li class="nav-itme">
+							<a class="button-success pure-button" href="/">About Me</a>
 						</li>
 					</ul>
 				</nav>
