--- a/templates/test.html
+++ b/templates/test.html
@@ -1,18 +1,23 @@
-<!DOCTYPE html>
-<html>
-<head>
-	<title>Just test template</title>
-	<style>
-		body {
-			background-color: red;
-		}
-		em {
-			color: LightSeaGreen;
-		}
-	</style>
-</head>
-<body>
-	<h1>hello world!</h1>
-	<strong>{{current_time}}</strong>
-</body>
-</html>
+{% extends "base.html" %}
+
+{% block content %}
+<div class="posts">
+	<!-- {% for post in post_list %} -->
+		<section class="post">
+			<header class="post-header">
+				<h2 class="post-title">{{ post.title }}</h2>
+				<p class="post-meta">
+					Time：<a class="post-author" href="#">{{ post.date_time|date:"Y /m /d"}}</a>
+					<a class="post-category post-category-js" href="#">{{ post.category }}</a>
+				</p>
+			</header>
+
+			<div class="post-description">
+				<p>
+					{{ post.content }}
+				</p>
+			</div>
+		</section>
+	<!-- {% endfor %} -->
+</div>
+{% endblock %}
